// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Footer Default 1`] = `
<View
  pointerEvents="none"
  style={
    Object {
      "bottom": 0,
      "height": 140,
      "position": "absolute",
      "width": "100%",
    }
  }
>
  <BVLinearGradient
    colors={
      Array [
        0,
        3003121664,
      ]
    }
    endPoint={
      Object {
        "x": 0.5,
        "y": 1,
      }
    }
    locations={null}
    pointerEvents="none"
    startPoint={
      Object {
        "x": 0.5,
        "y": 0,
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "height": 140,
          "position": "absolute",
          "width": "100%",
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`Storyshots Button Footer With Layout 1`] = `
Array [
  <View
    pointerEvents="none"
    style={
      Object {
        "bottom": 0,
        "height": 140,
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <BVLinearGradient
      colors={
        Array [
          0,
          3003121664,
        ]
      }
      endPoint={
        Object {
          "x": 0.5,
          "y": 1,
        }
      }
      locations={null}
      pointerEvents="none"
      startPoint={
        Object {
          "x": 0.5,
          "y": 0,
        }
      }
      style={
        Array [
          Object {
            "bottom": 0,
            "height": 140,
            "position": "absolute",
            "width": "100%",
          },
          undefined,
        ]
      }
    />
  </View>,
  <View
    style={
      Array [
        Object {
          "bottom": 24,
          "left": 24,
          "position": "absolute",
        },
        Object {
          "width": 252,
        },
      ]
    }
  >
    <View
      testID="button-fake"
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#FFFFFF",
            "borderRadius": 32,
            "borderWidth": 0,
            "flexDirection": "row",
            "height": 54,
            "justifyContent": "center",
            "marginBottom": 0,
            "opacity": 1,
          }
        }
        testID="button-fake-native"
      >
        <Text
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "flex": 1,
                "fontSize": 18,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 17,
                  "fontWeight": "700",
                  "textAlign": "center",
                },
                Object {
                  "color": "#546E7A",
                },
                undefined,
                undefined,
                undefined,
                undefined,
              ],
            ]
          }
        >
          Here we go!
        </Text>
      </View>
    </View>
  </View>,
]
`;
